# testgemm

./: README.md  gemmloop.c
LIBTG/: CMakeLists.txt  TGInstaller.bash
LIBTG/example/: gemmloop.c
LIBTG/include/: datatype.h
LIBTG/src/: tgutils.c
